..
    UNRELEASED
    ----------

    - **Backwards incompatible**: Removed support for obsolete versions of
      Django (<=1.7, plus 1.9).

    - Fix `#58`_: Support creating new custom user models with ``NOT NULL``
      fields. ``LDAPBackend.get_or_create()`` no longer saves a newly created
      user but instead simply instantiates it. This allows ``NOT NULL`` fields
      to be populated by ``USER_ATTR_MAP`` or
      :data:`django_auth_ldap.backend.populate_user` before saving to avoid an
      ``IntegrityError``. The user is still saved in
      ``LDAPBackend._get_or_create()``.

    .. _#58: https://bitbucket.org/illocution/django-auth-ldap/issues/58/

v1.2.15 - 2017-08-17 - Documentation improvements
-------------------------------------------------

- Fix `#83`_: Improved documentation for finding the official repository and
  contributing.

.. _#83: https://bitbucket.org/illocution/django-auth-ldap/issues/83/


v1.2.14 - 2017-07-24 - User DN caching
--------------------------------------

- Fix `#82`_: Under search/bind mode, the user's DN will now be cached for
  performance.

.. _#82: https://bitbucket.org/illocution/django-auth-ldap/issues/82/


v1.2.13 - 2017-06-19 - Selective group mirroring
------------------------------------------------

- Support selective group mirroring with :setting:`AUTH_LDAP_MIRROR_GROUPS` and
  :setting:`AUTH_LDAP_MIRROR_GROUPS_EXCEPT`.

- Fix `#73`_: Work around Django 1.11 bug with multiple authentication backends.

.. _#73: https://bitbucket.org/illocution/django-auth-ldap/issues/73/


v1.2.12 - 2017-05-20 - Complex group queries
--------------------------------------------

- Support for complex group queries via
  :class:`~django_auth_ldap.config.LDAPGroupQuery`.


v1.2.11 - 2017-04-22 - Testing and debugging cleanup
----------------------------------------------------

- Some more descriptive object representations.

- Improved tox.ini organization.


v1.2.9 - 2017-02-14 - Fix python-ldap incompatibility